--- a/feign/src/main/resources/static/common/footer.html
+++ b/feign/src/main/resources/static/common/footer.html
@@ -1,4 +1,4 @@
-<!-- <div class="fly-footer">
+<div class="fly-footer">
   <p><a href="http://fly.layui.com/" target="_blank">Fly社区</a> 2017 &copy; <a href="http://www.layui.com/" target="_blank">layui.com 出品</a></p>
   <p>
     <a href="http://fly.layui.com/jie/3147/" target="_blank">付费计划</a>
@@ -23,4 +23,4 @@ layui.config({
 }).extend({
   fly: 'index'
 }).use('fly');
-</script> -->
+</script>
