--- a/feign/src/main/resources/static/common/header.html
+++ b/feign/src/main/resources/static/common/header.html
@@ -1,3 +1,4 @@
+<html xmlns:th="http://www.thymeleaf.org">
 <div class="fly-header layui-bg-black">
   <div class="layui-container">
     <a class="fly-logo" href="/">
@@ -14,18 +15,20 @@
         <a href="http://www.layui.com/" target="_blank"><i class="iconfont icon-ui"></i>框架</a>
       </li>
     </ul>
-    
-    <ul class="layui-nav fly-nav-user">
-      <li class="layui-nav-item">
+
+    <ul class="layui-nav fly-nav-user" if>
+      <li class="layui-nav-item" th:if="${session.userid == null}">
         <a class="iconfont icon-touxiang layui-hide-xs" href="../user/login.html"></a>
       </li>
-      <li class="layui-nav-item">
-        <a href="../user/login.html">登入</a>
+      <li class="layui-nav-item" th:if="${session.userid == null}">
+        <a href="/login">登录</a>
       </li>
-      <li class="layui-nav-item">
-        <a href="../user/reg.html">注册</a>
+      <li class="layui-nav-item" th:if="${session.userid != null}"  >
+        <a href="../user/reg.html" th:text="${session.userid}"></a>
+      </li>
+      <li class="layui-nav-item" th:if="${session.userid != null}" >
+        <a href="/account/loginout">退出</a>
       </li>
     </ul>
-
   </div>
 </div>
