--- a/feign/src/main/resources/static/login.html
+++ b/feign/src/main/resources/static/login.html
@@ -14,7 +14,7 @@
     <section id="content">
         <div class="content-header clearfix">
             <a href="javascript:;" class="current" id="0">登陆</a>
-            <a href="javascript:;" id="1">我要注册</a>
+            <a href="javascript:;" id="1">注册</a>
         </div>
 
         <div class="content-body">
