--- a/feign/src/main/resources/static/index.html
+++ b/feign/src/main/resources/static/index.html
@@ -378,6 +378,21 @@
  
 <script src="/res/layui/layui.js"></script>
  <script>
+   layui.cache.page = '';
+   layui.cache.user = {
+     username: '游客'
+     ,uid: -1
+     ,avatar: '../res/images/avatar/00.jpg'
+     ,experience: 83
+     ,sex: '男'
+   };
+   layui.config({
+     version: "3.0.0"
+     ,base: '/res/mods/' //这里实际使用时，建议改成绝对路径
+   }).extend({
+     fly: 'index'
+   }).use('fly');
+
    $("#nav").load("/header");
    $("#head").load("/common/column.html");
    $("#footer").load("/common/footer.html");
